# llro

./: .gitignore  HOW_IT_WORKS.md  Makefile  README.md  config.example.yml  config.yml  llro.service  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml  publish-to-pypi.yml  publish-to-testpypi.yml
src/: llro.py  llro_cli.py
tests/: test_import.py  test_integration_compose.py  test_llro.py  test_llro_cli.py
tests/integration/: docker-compose.yml
tests/integration/images/llro/: Dockerfile  run-llro-test.sh
tests/integration/images/router/: Dockerfile  run-router.sh
